--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "scripts": {
     "build": "tsc",
+    "dev": "bun ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {},
   "devDependencies": {
-    "typescript": "^5.0.2",
     "@types/node": "^18.16.3",
     "rollup-plugin-typescript-paths": "^1.4.0",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.2",
+    "dotenv": "^16.0.3"
   }
 }
