--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "directus2formkit",
+  "description": "Transform directus fields schema from api to formkit json file",
+  "author": "hellisart <7info7web@gmail.com>",
   "private": true,
   "version": "1.0.0",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/francyfox/directus2formkit.git"
+  },
+  "keywords": [
+    "directus",
+    "formkit"
+  ],
   "files": [
     "dist"
   ],
