fix errors, update cli

--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,5 @@
 DIRECTUS_HOST="http://127.0.0.1:8055"
 SCHEMA_EXPORT_DIR="./export"
 TRANSFORM_SCHEMA_LIST="post, textblock, directus_users"
+ADMIN_EMAIL="7info7web@gmail.com"
+ADMIN_PASSWORD="123"
